--- a/pom.xml
+++ b/pom.xml
@@ -53,15 +53,16 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <!-- 权限认证依赖  -->
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!--jwt依赖-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.0</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
     <build>
         <plugins>
