--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,19 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.0</version>
         </dependency>
+
+        <!--poi-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
+        <!--fastdfs-->
+<!--        <dependency>-->
+<!--            <groupId>org.csource</groupId>-->
+<!--            <artifactId>fastdfs-client-java</artifactId>-->
+<!--            <version>1.27-SNAPSHOT</version>-->
+<!--        </dependency>-->
     </dependencies>
     <build>
         <plugins>
